--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
-    <h1>World shall know pain</h1>
+<body class="bg-color">
+    
+
+    <a class="btn-custom text-uppercase" href="page2.html">
+        Happy Birthday dipa
+    </a>
+
+    <script src="assets/js/all.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
