--- a/page3.html
+++ b/page3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://deepu037.github.io/assets/css/style.css">
 </head>
 <body class="bg-color">
     <div style="position: relative;">
