--- a/page4.html
+++ b/page4.html
@@ -9,7 +9,7 @@
 <body class="bg-color">
     <div style="position: relative;">
         <img src="assets/img/img3.jpg" alt="">
-        <div class="article">
+        <div class="article" style="top: 92%; width: 60%;">
             <p class="m-0">Shb shomoy matha uchu kore cholbe</p>
         </div>
         <a href="#"><i class="fa-solid fa-circle-arrow-right"></i></a>
