--- a/page4.html
+++ b/page4.html
@@ -9,10 +9,10 @@
 <body class="bg-color">
     <div style="position: relative;">
         <img src="assets/img/img3.jpg" alt="">
-        <div class="article" style="top: 92%; width: 60%;">
+        <div class="article slide_top" style="top: 92%; width: 60%; right: 0;">
             <p class="m-0">Shb shomoy matha uchu kore cholbe</p>
         </div>
-        <a href="#"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        <a href="page5.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 </body>
 </html>
