--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 <body class="bg-color">
     <div style="position: relative;">
         <img src="assets/img/img1.jpg" alt="">
-        <div class="article">
+        <div class="article slide_top" style="left: 0;">
             <p class="m-0">Dekhte dekhte jiboner koto gula bochor par hoye jacche</p>
             <p class="m-0">Eivabe ekdin jiboner shesh porjay chole jaba, ei olpo shomoy tukuke mulloban korar shorboccho chesta kore jeo</p>
         </div>
