--- a/page5.html
+++ b/page5.html
@@ -14,9 +14,7 @@
         </div>
         <!-- <a href="#" style="bottom: -25%; transform: rotate(-90deg); right: 0%; left: 50%; transform: translateX(-50%); width: max-content;"><i class="fa-solid fa-circle-arrow-right"></i></a> -->
 
-        <div class="u-img">
-
-        </div>
+        <script src="assets/js/main.js"></script>
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
