--- a/page4.html
+++ b/page4.html
@@ -14,5 +14,7 @@
         </div>
         <a href="page5.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
