--- a/page3.html
+++ b/page3.html
@@ -8,8 +8,8 @@
 </head>
 <body class="bg-color">
     <div style="position: relative;">
-        <img src="assets/img/img2.jpg" alt="">
-        <div class="article slide_left" style="top: 93%;">
+        <img src="assets/img/img2.jpg" alt="" id="img">
+        <div class="article" style="top: 93%;" id="left">
             <p class="m-0">Ajibon emn happy thako kokhnno koshte theko na</p>
         </div>
         <a href="page4.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
