--- a/page5.html
+++ b/page5.html
@@ -8,15 +8,16 @@
 </head>
 <body class="bg-color">
     <div style="position: relative;">
-        <img src="assets/img/img4.jpg" alt="">
-        <div class="article slide_left">
+        <img src="assets/img/img4.jpg" alt="" id="img">
+        <div class="article" id="left">
             <p class="m-0">Jibone badha ashbei. Badha ke voy pele cholbe na. Tmr shb badha par kore deoar jonno ami shathe achi</p>
         </div>
         <!-- <a href="#" style="bottom: -25%; transform: rotate(-90deg); right: 0%; left: 50%; transform: translateX(-50%); width: max-content;"><i class="fa-solid fa-circle-arrow-right"></i></a> -->
 
-        <script src="assets/js/main.js"></script>
+        
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
