--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body class="bg-color">
     
+    <div class="tap">
+        <p class="text-uppercase m-auto">tap below</p>
+        <i class="fa-solid fa-circle-arrow-down"></i>
+    </div>
 
     <a class="btn-custom text-uppercase" href="page2.html">
         Happy Birthday dipa
