--- a/page4.html
+++ b/page4.html
@@ -9,7 +9,7 @@
 <body class="bg-color">
     <div style="position: relative;">
         <img src="assets/img/img3.jpg" alt="" id="img">
-        <div class="article" style="top: 92%; width: 60%; right: 0;" id="top">
+        <div class="article d-none" style="top: 92%; width: 60%; right: 0;" id="top">
             <p class="m-0">Shb shomoy matha uchu kore cholbe</p>
         </div>
         <a href="page5.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
