--- a/page5.html
+++ b/page5.html
@@ -9,7 +9,7 @@
 <body class="bg-color">
     <div style="position: relative;">
         <img src="assets/img/img4.jpg" alt="" id="img">
-        <div class="article" id="left">
+        <div class="article d-none" id="left">
             <p class="m-0">Jibone badha ashbei. Badha ke voy pele cholbe na. Tmr shb badha par kore deoar jonno ami shathe achi</p>
         </div>
         <!-- <a href="#" style="bottom: -25%; transform: rotate(-90deg); right: 0%; left: 50%; transform: translateX(-50%); width: max-content;"><i class="fa-solid fa-circle-arrow-right"></i></a> -->
