--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body class="bg-color">
     
-    <div class="tap">
-        <p class="text-uppercase m-auto">tap below</p>
-        <i class="fa-solid fa-circle-arrow-down"></i>
+    <div>
+        <div class="tap">
+            <p class="text-uppercase m-auto">tap below</p>
+            <i class="fa-solid fa-circle-arrow-down"></i>
+        </div>
+    
+        <a class="btn-custom text-uppercase" href="page2.html">
+            Happy Birthday dipa
+        </a>
     </div>
-
-    <a class="btn-custom text-uppercase" href="page2.html">
-        Happy Birthday dipa
-    </a>
 
     <script src="assets/js/all.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
