--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
     
         <a class="btn-custom text-uppercase" href="page2.html">
-            Happy Birthday dipa
+            Lorem ipsum dolor sit amet.
         </a>
     </div>
 
