--- a/last_page.html
+++ b/last_page.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-color">
-    <div style="position: relative; height: 100vh;" class="parent">
+    <div style="position: relative; height: 100vh;" class="parent divs">
         <div class="card slide_left50" style="width: 900px; height: 900px; background-color: #fff;">
         </div>
 
