--- a/page4.html
+++ b/page4.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://deepu037.github.io/assets/css/style.css">
 </head>
 <body class="bg-color">
-    <div style="position: relative;">
+    <div style="position: relative;" class="divs">
         <img src="assets/img/img3.jpg" alt="" id="img">
         <div class="article d-none" style="top: 92%; width: 60%; right: 0;" id="top">
             <p class="m-0">Shb shomoy matha uchu kore cholbe</p>
