--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://deepu037.github.io/assets/css/style.css">
 </head>
 <body class="bg-color">
-    <div style="position: relative;">
+    <div style="position: relative;" class="divs">
         <img src="assets/img/img1.jpg" alt="" id="img">
         <div class="article d-none" style="left: 0;" id="top">
             <p class="m-0">Dekhte dekhte jiboner koto gula bochor par hoye jacche</p>
