--- a/page3.html
+++ b/page3.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://deepu037.github.io/assets/css/style.css">
 </head>
 <body class="bg-color">
-    <div style="position: relative;">
+    <div style="position: relative;" class="divs">
         <img src="assets/img/img2.jpg" alt="" id="img">
         <div class="article d-none" style="top: 93%;" id="left">
             <p class="m-0">Ajibon emn happy thako kokhnno koshte theko na</p>
