--- a/page5.html
+++ b/page5.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://deepu037.github.io/assets/css/style.css">
 </head>
 <body class="bg-color">
-    <div style="position: relative;">
+    <div style="position: relative;" class="divs">
         <img src="assets/img/img4.jpg" alt="" id="img">
         <div class="article d-none" id="left">
             <p class="m-0">Jibone badha ashbei. Badha ke voy pele cholbe na. Tmr shb badha par kore deoar jonno ami shathe achi</p>
