--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
             <p class="m-0">Dekhte dekhte jiboner koto gula bochor par hoye jacche</p>
             <p class="m-0">Eivabe ekdin jiboner shesh porjay chole jaba, ei olpo shomoy tukuke mulloban korar shorboccho chesta kore jeo</p>
         </div>
-        <a href="page3.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        <a href="page3.html" class="fade"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 
     <script src="assets/js/main.js"></script>
