--- a/page3.html
+++ b/page3.html
@@ -12,7 +12,7 @@
         <div class="article d-none" style="top: 93%;" id="left">
             <p class="m-0">Ajibon emn happy thako kokhnno koshte theko na</p>
         </div>
-        <a href="page4.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        <a href="page4.html" class="fade"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 
     <script src="assets/js/main.js"></script>
