--- a/page4.html
+++ b/page4.html
@@ -12,7 +12,7 @@
         <div class="article d-none" style="top: 92%; width: 60%; right: 0;" id="top">
             <p class="m-0">Shb shomoy matha uchu kore cholbe</p>
         </div>
-        <a href="page5.html"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        <a href="page5.html" class="fade"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 
     <script src="assets/js/main.js"></script>
