--- a/page5.html
+++ b/page5.html
@@ -12,7 +12,7 @@
         <div class="article d-none" id="left">
             <p class="m-0">Jibone badha ashbei. Badha ke voy pele cholbe na. Tmr shb badha par kore deoar jonno ami shathe achi</p>
         </div>
-        <a href="last_page.html" style="bottom: -40%; right: 0%; left: 50%; transform: translateX(-50%); width: max-content;"><i class="fa-solid fa-circle-arrow-right"></i></a>
+        <a href="last_page.html" style="bottom: -40%; right: 0%; left: 50%; transform: translateX(-50%); width: max-content;" class="fade"><i class="fa-solid fa-circle-arrow-right"></i></a>
     </div>
 
     <script src="assets/js/bootstrap.bundle.min.js"></script>
